# Doprax-Telegram-Bot

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
scripts/systemd/: doprax-telegram-bot.service
src/bot/: config.py  doprax_client.py  errors.py  i18n.py  keyboards.py  main.py  states.py  storage.py  utils.py
src/bot/handlers/: common.py  create_vm.py  health.py  help.py  list_vms.py  locations.py  menu.py  os_list.py  settings.py  start.py  status.py  vm_mgmt.py
tests/: test_doprax_client.py  test_i18n.py  test_states.py  test_validation.py
